force-app/main/default/objects/Studentyry__c/Studentyry__c.object-meta.xml
<CustomObject>
    <description>This contains students information</description>
    <label>Studentrttr</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studentsyry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>