force-app/main/default/objects/Studentyry__c/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <label>Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>