force-app/main/default/objects/Studentyry__c/fields/Prof_Class__c.field-meta.xml
<CustomField>
    <fullName>Prof_Class__c</fullName>
    <label>Prof Class</label>
    <length>15</length>
    <type>Text</type>
</CustomField>