force-app/main/default/objects/Studentyry__c/fields/total_count__c.field-meta.xml
<CustomField>
    <fullName>total_count__c</fullName>
    <label>total count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>