force-app/main/default/objects/Studentyry__c/validationRules/Name_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Issue</fullName>
    <active>true</active>
    <errorConditionFormula>List__c = &apos;False&apos; &amp;&amp;  (ISBLANK( Name ) || ISBLANK( ID_Number__c ) )</errorConditionFormula>
    <errorMessage>You need to fill both Name and Id number</errorMessage>
</ValidationRule>