force-app/main/default/objects/Studentyry__c/validationRules/Student_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Details</fullName>
    <active>true</active>
    <errorConditionFormula>(ID_Number__c = 10482 &amp;&amp;  List__c =&quot;Abhi&quot;)</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>ID 10482 is Srikanth not Abhinav</errorMessage>
</ValidationRule>